--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     Hi! I am Samarth. I am currently pursuing Btech. from GGSIPU, Delhi. 
     Currently in my 7th sem. making my personal portfolio.
+    I have worked on a few CLI apps, will showcase them tommorow.
 </body>
 </html>
