added my hobbies

--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     Hi! I am Samarth. I am currently pursuing Btech. from GGSIPU, Delhi. 
     Currently in my 7th sem. making my personal portfolio.
     I have worked on a few CLI apps, will showcase them tommorow.
+    My hobbies are: 
+    Watching tech videos, playing cricket, learning about history, sleep. 
 </body>
 </html>
